# treasury-take-home

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
.github/workflows/: ci.yml  docker.yml  security.yml
backend/: .env.example  .gitignore  README.md  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a91d4f60c2b8_submission_images.py  b7c41d20a9e1_submission_review_decision.py  c3f82e11d4b7_audit_events.py  e159073954d6_initial_schema.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: __init__.py  audit.py  schemas.py  submissions.py  verify.py
backend/app/batch/: __init__.py  ingest.py  manifest.py  schemas.py
backend/app/extract/: __init__.py  extractors.py  schemas.py
backend/app/match/: __init__.py  matcher.py  schemas.py
backend/app/models/: __init__.py  application.py  audit.py  batch.py  enums.py  submission.py  submission_image.py  types.py
backend/app/ocr/: __init__.py  preprocess.py  quality.py  schemas.py  service.py
backend/app/pool/: __init__.py  pool.json
backend/app/seed/: __init__.py  __main__.py
backend/app/seed/data/: cola_manifest.json  manifest.json
backend/app/verify/: __init__.py  aggregate.py  engine.py  pipeline.py  schemas.py  warning.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_aggregate.py  test_api_submissions.py  test_api_verify.py  test_batch_ingest.py  test_batch_manifest.py  test_config.py  test_corpus.py  test_engine.py  test_extract.py  test_health.py  test_match.py  test_models.py  test_ocr.py  test_pipeline.py  test_pool.py  test_preprocess.py  test_quality.py  test_seed.py  test_verify_warning.py
backend/tests/corpus/: README.md  __init__.py  cases.py  generate.py  manifest.json  schema.py
backend/tests/eval/: manifest.json  test_ocr_eval.py
backend/tests/eval/images/: ATTRIBUTION.md
backend/tests/eval_cola/: README.md  manifest.json  test_cola_eval.py
backend/tests/fixtures/: generate_sample_label.py
backend/tests/perf/: __init__.py  harness.py  loadreport.py  loadtest.py  report.py  test_latency_sla.py  test_load_latency.py  test_verify_e2e.py
claude-design/: .thumbnail  Label Verification.dc.html
docker/: Dockerfile.backend  Dockerfile.frontend  backend-entrypoint.sh  docker-compose.dev.yml  docker-compose.yml  nginx.conf
docs/: perf.md
frontend/: .npmrc  .prettierignore  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  a11y.test.tsx  index.css  router.tsx  vite-env.d.ts
frontend/src/components/: ApiHealth.tsx  ErrorBoundary.tsx  StatusBadge.tsx
frontend/src/components/application/: ApplicationForm.test.tsx  ApplicationForm.tsx  LabelUpload.test.tsx  LabelUpload.tsx
frontend/src/components/comparison/: ComparisonView.test.tsx  ComparisonView.tsx  FieldComparisonTable.tsx  GovernmentWarningCard.tsx  (+3 more)
frontend/src/lib/: api.gen.ts  api.ts  application-validation.test.ts  application-validation.ts  application.ts  audit.test.ts  audit.ts  batch.test.ts  batch.ts  status.ts  verification.fixture.ts  verification.ts
frontend/src/pages/: AuditPage.tsx  BatchPage.tsx  HomePage.tsx  NotFoundPage.tsx  QueuePage.test.tsx  QueuePage.tsx  ReviewPage.tsx  VerifyPage.test.tsx  VerifyPage.tsx
frontend/src/test/: setup.ts  vitest-axe.d.ts
(+17 files in other folders)
