[project]
name = "label-verify-backend"
version = "0.1.0"
description = "AI-powered alcohol label verification API (TTB prototype)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    # Required by FastAPI to parse multipart/form-data (the verify endpoint
    # accepts a file upload alongside the application form fields).
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    # OCR: rapidocr 3.x (PP-OCRv4 models) with onnxruntime as the explicit
    # inference backend (rapidocr 3.x is backend-agnostic). Pulls opencv-python
    # transitively; numpy is imported directly so it is pinned. Models are
    # vendored in app/ocr/models (no runtime download).
    "rapidocr>=3.0,<4",
    "onnxruntime>=1.17",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    # Used only to (re)generate the synthetic sample label fixture.
    "pillow>=10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
# Ship the vendored OCR models inside the package so installs are self-contained.
"app.ocr" = ["models/*.onnx"]
# Demo seed labels for SEED_DEMO / `python -m app.seed`.
"app.seed" = ["data/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Alembic migrations are generated artifacts; don't lint/format them.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
# pyflakes, pycodestyle, isort, bugbear, pyupgrade, comprehensions
select = ["E", "F", "I", "B", "UP", "C4", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "perf: real-OCR latency benchmark against the 5s budget (slow; runs in CI). Deselect with -m 'not perf'.",
    "e2e: real-OCR end-to-end check through the HTTP API (slow). Deselect with -m 'not e2e'.",
    "eval: real-world OCR eval over a manifest of label photos (slow; fetches images). Run with -m eval.",
]

[tool.mypy]
python_version = "3.11"
files = ["app"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
